[tool.poetry]
name = "homework8-web-mongodb"
version = "0.1.0"
description = "MongoDB"
authors = ["BGU"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^20.0.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
